navbar dropdown button text align fix

--- a/src/style/components/Header.scss
+++ b/src/style/components/Header.scss
@@ -156,6 +156,7 @@
   }
 
   .dropdown{
+    text-align: center;
 
     button{
       text-decoration: none;
